@@ -1,3 +1,12 @@
+2012-05-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/unitTests/testRcppModule/src/rcpp_module.cpp: added more
+	comments, added copyright header, corrected output of example
+	functions by not escaping "backslash-n" twice
+	* inst/unitTests/testRcppModule/src/stdVector.cpp: added some
+	comments, added copyright header
+	* inst/unitTests/testRcppModule/src/Num.cpp: Idem
+
 2012-05-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* inst/include/Rcpp/iostream/Rostream.h: Added Rstreambuf.h include
